Fix Navigation Spacing Part 1

--- a/interface/themes/default-variables.scss
+++ b/interface/themes/default-variables.scss
@@ -91,3 +91,6 @@ $displays: none, inline, inline-block, block, table, table-row, table-cell, flex
 
 // Enables responsive text for Bootstrap
 $enable-responsive-font-sizes: true;
+
+$close-color: $black;
+$close-text-shadow: 0 1 0 $black;
