--- a/interface/themes/oe-styles/style_light.scss
+++ b/interface/themes/oe-styles/style_light.scss
@@ -1,9 +1,11 @@
+//
+//  Style Light Theme SASS
+//
+
 /* Bootstrap Code */
 
-$black: #222;
-$close-color: $black;
-$close-text-shadow: 0 1 0 $black;
-$gray: #cdcdcd;
+// Do not remove -- sets key Bootstrap variables
+@import "../default-variables";
 
 // Import Bootstrap 4 SCSS Files before doing anything
 // This gets replaced in gulp now -- do not touch
@@ -23,11 +25,6 @@ $fa-font-path: "../assets/@fortawesome/fontawesome-free/webfonts";
 
 @import "../navigation-slide/future-bootstrap";
 
-:root {
-  --tabTopBorderWidth: 0.2em;
-  --gray300: #cdcdcd;
-}
-
 /* Overrides go here */
 @if $compact-theme == false {
   .btn-secondary {
@@ -37,53 +34,46 @@ $fa-font-path: "../assets/@fortawesome/fontawesome-free/webfonts";
   }
 
   .tabSpan {
-    border-top: var(--tabTopBorderWidth) solid var(--primary) !important;
-    font-weight: 600 !important;
-    padding: 0.25em 0.4em !important;
+    // TODO: Fix all of this as it isn't in the proper place
+    //border-top: 0.2rem solid var(--primary) !important;
+    //font-weight: 600 !important;
+    //padding: 0.25em 0.4em !important;
 
-    .fa {
-      color: $gray-500 !important;
+  //   .fa {
+  //     color: $gray-500 !important;
 
-      &:hover {
-        color: $gray-700 !important;
-      }
-    }
-  }
+  //     &:hover {
+  //       color: $gray-700 !important;
+  //     }
+  //   }
+  // }
 
-  .tabsNoHover {
-    border-top: var(--tabTopBorderWidth) solid transparent !important;
-    font-weight: normal !important;
-  }
+  // .tabsNoHover {
+  //   //border-top: 0.2rem solid transparent !important;
+  //   //font-weight: normal !important;
+  // }
 
-  // MAIN NAV
-  // The top level of the menu
-  .menuLabel {
-    font-size: 0.9em !important;
-    font-weight: normal !important;
-    padding: 0.2em 0.35rem !important;
-    transition-duration: 0ms !important;
-  }
+  // // .dropdown .dropdown-menu {
+  // //   top: auto !important;
+  // // }
 
-  .dropdown .dropdown-menu {
-    top: auto !important;
-  }
+  // .dropdown ul.dropdown-menu .dropdown ul.dropdown-menu {
+  //   top: 0 !important;
+  // }
 
-  .dropdown ul.dropdown-menu .dropdown ul.dropdown-menu {
-    top: 0 !important;
-  }
+  // .menuLabel:hover,
+  // .menuEntries li .menuLabel:hover,
+  // .menuSection:hover {
+  //   background-color: lighten(theme-color("primary"), 40%) !important;
+  // }
 
-  .menuLabel:hover,
-  .menuEntries li .menuLabel:hover,
-  .menuSection:hover {
-    background-color: lighten(theme-color("primary"), 40%) !important;
-  }
+  // .acck {
+  //   font-size: 0.9em !important;
+  // }
 
-  .acck {
-    font-size: 0.9em !important;
-  }
-
-  .tabSpan.tabsNoHover:hover {
-    background-color: $gray-300 !important;
+  // .tabSpan.tabsNoHover:hover {
+  //   background-color: $gray-300 !important;
+  // }
   }
 }
 
